# diq

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 0-tomaz-suller-exploration.ipynb  1-federica.ipynb  1-tomaz-suller-profiling-analysis.ipynb  1a-tomaz-suller-profiling-analysis.ipynb  1b-tomaz-suller-functional-dependencies.ipynb  2b-tomaz-suller-street-name-correction.ipynb  2c-tomaz-suller-duplicate-detection.ipynb  Description_ExistingUse_clustering.ipynb  Satvik_Handling_description.ipynb  Satvik_ML_Analysis.ipynb  Satvik_ML_Analysis_3Models.ipynb  Satvik_data_assesment.ipynb  Satvik_data_handling using_clustering.ipynb  tsne_cosine_similarity.ipynb
references/: data-dictionary.xlsx
reports/: Makefile  main.md  metadata.yaml  pandoc.sh
sf_permits/: __init__.py  cleaning.py  config.py  dataset.py  features.py  plots.py  profiling.py
sf_permits/modeling/: predict.py  train.py
sf_permits/utils/: string_similarity.py
