[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sf_permits"
version = "0.0.1"
description = "Politecnico di Milano Data and Information Quality 2024-2025 project"
authors = [
    { name = "Tomaz Maia Suller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas[parquet]>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "strsimpy>=0.2.1",
    "tqdm>=4.67.1",
    "typer>=0.13.1",
]

[project.optional-dependencies]
fd = [
    "desbordante>=2.2.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["sf_permits"]
force-sort-within-sections = true

[tool.uv.sources]
sf-permits = { workspace = true }

[dependency-groups]
dev = [
    "sf-permits",
]
